right side of hero section done.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./assets/css/reset.css" />
     <link rel="stylesheet" href="./assets/css/index.css" />
+    <!-- icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Nate Baker CS Tutor</title>
     <!-- Calendly link widget begin -->
     <link
@@ -15,7 +17,35 @@
   </head>
   <body>
     <!-- hero section -->
-    <header></header>
+    <header class="hero-container">
+      <div class="inner-hero-container">
+        <div class="hero-left-side-container"></div>
+        <div class="hero-right-side-container">
+          <div class="outer-card-container">
+            <div class="card-background">
+              <div class="hero-card-img-container">
+                <img
+                  src="./assets/images/IMG_4092.JPG"
+                  alt="hero card profile pic"
+                />
+              </div>
+              <!-- Name and position container -->
+              <div class="name-and-position-container">
+                  <h3>Nate Baker</h3>
+                  <h4>Software Engineer <br> Microsoft</h3>
+              </div>
+              <div class="social-links-container">
+                <!-- add social icons for linkedin, youtube and website -->
+                <a href="https://www.linkedin.com/in/nate-baker-30259010a/" target="_blank" rel="noopener noreferrer" class="fa fa-linkedin"></a>
+                <a href="https://www.youtube.com/channel/UCY_c3xNalxIN84_Hk3-3foQ?sub_confirmation=1" target="_blank" rel="noopener noreferrer" class="fa fa-youtube"></a>
+                <a href="https://github.com/nate2427" target="_blank" rel="noopener noreferrer" class="fa fa-github"></a>
+                <a href="https://www.natebaker.io/" target="_blank" rel="noopener noreferrer" class="fa fa-globe"></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
 
     <!-- navigation -->
     <nav></nav>
