added a quick note to refer back to later

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
     <!-- hero section -->
     <header class="hero-container">
       <div class="inner-hero-container">
-        <div class="hero-left-side-container"></div>
+        <div class="hero-left-side-container">
+            <!-- The Number One Coding Tutor  -->
+        </div>
         <div class="hero-right-side-container">
           <div class="outer-card-container">
             <div class="card-background">
